# pimconf

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  flake.nix  install.sh  package.nix
docs/: README.md
examples/: autoconfig_mx.rs  pacc_client.rs
src/: coroutine.rs  lib.rs  main.rs  rfc8414.rs  rfc9110.rs  rfc9728.rs
src/autoconfig/: cli.rs  client.rs  config.rs  isp.rs  mailconf.rs  mod.rs  mx.rs  types.rs
src/cli/: common.rs  domain.rs  misc.rs  mod.rs
src/compose/: client.rs  collect.rs  config.rs  mod.rs  providers.rs  types.rs
src/pacc/: client.rs  config.rs  discover.rs  mod.rs  types.rs
src/rfc6186/: client.rs  discover.rs  mod.rs  service.rs  srv.rs
src/rfc6764/: cli.rs  client.rs  discover.rs  mod.rs  resolve.rs  service.rs  srv.rs  txt.rs  types.rs  well_known.rs
src/rfc8620/: mod.rs  resolve.rs  well_known.rs
src/search/: all.rs  cli.rs  client.rs  collect.rs  first.rs  mod.rs  providers.rs  types.rs
src/shared/: dns.rs  http.rs  mod.rs  pool.rs
