[package]
name = "io-pim-discovery"
description = "PIM discovery CLI and client library for Rust"
version = "0.2.0"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "no-std"]
keywords = ["autoconfig", "io-free", "coroutine", "no-std", "pacc"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-pim-discovery/latest/io_pim_discovery"
repository = "https://github.com/pimalaya/io-pim-discovery"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring"]
client = ["dep:anyhow", "dep:io-http", "io-http/client", "dep:url", "dep:resolv-conf", "dep:ipconfig"]
stream = ["client", "dep:pimalaya-stream"]
cli = ["stream", "autoconfig", "pacc", "rfc6186", "rfc6764", "rfc8620", "rfc8414", "rfc9728", "dep:clap", "pimalaya-cli/terminal", "pimalaya-cli/table"]
autoconfig = ["dep:io-http", "dep:serde", "dep:serde-xml-rs", "dep:url"]
pacc = ["dep:io-http", "dep:serde", "dep:serde_json", "dep:url", "dep:base64", "dep:sha2", "dep:subtle"]
srv = ["rfc6186"]
rfc6186 = ["dep:serde", "dep:url", "dep:io-http"]
rfc6764 = ["dep:serde", "dep:url", "rfc6186"]
rfc8414 = ["dep:serde", "dep:serde_json", "dep:url", "url/serde", "dep:io-http"]
rfc8620 = ["dep:url", "rfc6186"]
rfc9728 = ["rfc8414"]
rustls-ring = ["stream", "pimalaya-stream/rustls-ring", "io-http/rustls-ring"]
rustls-aws = ["stream", "pimalaya-stream/rustls-aws", "io-http/rustls-aws"]
native-tls = ["stream", "pimalaya-stream/native-tls", "io-http/native-tls"]
vendored = ["pimalaya-stream?/vendored", "io-http?/vendored"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "pim-discovery"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "autoconfig-mx"
path = "examples/autoconfig_mx.rs"
required-features = ["autoconfig"]

[[example]]
name = "pacc-client"
path = "examples/pacc_client.rs"
required-features = ["pacc", "client"]

[build-dependencies]
pimalaya-cli = { version = "0.1", default-features = false, features = ["build"], optional = true }

[dev-dependencies]
env_logger = "0.11"

[dependencies]
anyhow = { version = "1", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
clap = { version = "4.4", features = ["derive", "wrap_help"], optional = true }
domain = { version = "0.12", default-features = false, features = ["alloc", "std", "unstable-new"] }
io-http = { version = "0.3", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
pimalaya-cli = { version = "0.1", default-features = false, optional = true }
pimalaya-stream = { version = "0.1", default-features = false, features = ["std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-xml-rs = { version = "0.8", optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }
subtle = { version = "2", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.2", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
resolv-conf = { version = "0.7", optional = true }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3", optional = true }

[patch.crates-io]
# TODO: drop the patch once the domain new API is released on crates.io.
domain = { git = "https://github.com/nlnetlabs/domain", rev = "d89a2827e2fcbaffc7b7b3ecb17366c6b3819ec8" }
